# Food-prep

./: .gitignore  .handoff.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: ARCHITECTURE_CHECKPOINT_ROUND_4.md  PRODUCT_DESIGN.md  ROADMAP.md
docs/adr/: 0001-dual-mode-cook-scout.md
docs/test_outputs/: tomato_manual_eval.md
scripts/: capture_screenshots.py  demo.py
src/foodprep/: __init__.py  cli.py  corpus.py  db.py  demo.py  export.py  loader.py  query.py  schema.sql  tasting.py  vocabulary.py
src/foodprep/data/: component_profiles.yaml  destination_profiles.yaml  flavour_routes.yaml  scout_rules.yaml  tomato.yaml  vocabularies.yaml
src/foodprep/ui/: __init__.py  design.css  graph.py  render.py  streamlit_app.py
tests/: conftest.py  test_apricot.py  test_catalogue.py  test_corpus.py  test_cucumber.py  test_destinations.py  test_export.py  test_flavour_routes.py  test_journeys.py  test_kale.py  test_mango.py  test_novelty.py  test_query.py  test_rutabaga.py  test_scout_generator.py  test_state_profiles.py  test_tasting.py  test_ui_handles.py  test_vocabulary.py
